[tool.poetry]
name = "replit-bot"
version = "2.0.0"
description = "make discord.py like bots on replit and/or do replapi-it style replit interactions"
authors = ["bigminboss <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0"
replit = "^3.2.4"
Flask = "^2.2.0"
requests = "^2.28.1"
waitress = "^2.1.2"
datauri = "^1.0.0"
pyee = "^9.0.4"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"
Markdown = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"